updated package name in package.json
PDVI-2399

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "powerchord-conductor",
+  "name": "forte-conductor",
   "private": true,
   "verson": "1.0.0.0",
   "description": "Compose data for components inspired by Facebook Relay.",
