--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
   "author": "Powerchord, Inc",
   "main": "src/index.js",
   "scripts": {
-    "test": "jasmine JASMINE_CONFIG_PATH=test/jasmine.json"
-  },
-  "dependencies": {
-    "object.assign": "^3.0.0"
+    "build": "babel -d lib/ src/",
+    "test": "jasmine JASMINE_CONFIG_PATH=test/jasmine.json",
+    "cover": "babel-node node_modules/.bin/isparta cover node_modules/jasmine/bin/jasmine.js -- JASMINE_CONFIG_PATH=test/jasmine.json"
   },
   "devDependencies": {
+    "babel-cli": "^6.4.5",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-stage-2": "^6.3.13",
+    "babel-register": "^6.4.3",
+    "isparta": "^4.0.0",
+    "istanbul": "^0.4.2",
     "jasmine": "^2.3.2",
     "jasmine-reporters": "^2.0.7"
   }
