--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "main": "lib/index",
   "scripts": {
     "build": "babel -d lib/ src/",
-    "test": "jasmine JASMINE_CONFIG_PATH=test/jasmine.json",
-    "cover": "babel-node node_modules/.bin/isparta cover node_modules/jasmine/bin/jasmine.js -- JASMINE_CONFIG_PATH=test/jasmine.json"
+    "test": "jasmine",
+    "cover": "babel-node node_modules/.bin/isparta cover node_modules/jasmine/bin/jasmine.js"
   },
   "devDependencies": {
     "babel-cli": "^6.4.5",
