--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jasmine-reporters": "^2.0.7"
   },
   "dependencies": {
-    "debug": "^2.2.0"
+    "debug": "^2.2.0",
+    "memory-cache": "^0.1.4"
   }
 }
