--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "babel -d lib/ src/",
     "test": "jasmine",
-    "cover": "babel-node node_modules/.bin/isparta cover node_modules/jasmine/bin/jasmine.js"
+    "cover": "babel-node node_modules/.bin/isparta cover --x **/spec/** node_modules/jasmine/bin/jasmine.js"
   },
   "devDependencies": {
     "babel-cli": "^6.4.5",
