--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "debug": "^2.2.0",
+    "extend-error": "0.0.2",
     "memory-cache": "^0.1.4"
   },
   "repository": {
